app/styles/_dialogs.scss
@mixin placeholder {
  ::-webkit-input-placeholder {@content}
  :-moz-placeholder           {@content}
  ::-moz-placeholder          {@content}
  :-ms-input-placeholder      {@content}
}

@include placeholder {
  font-style: italic;
  color: #496685;
}

input[required] {
  &::-webkit-input-placeholder:before {
    content:'* ';
  }

  &:-moz-placeholder:before {
    content:'* ';
  }

  &::-moz-placeholder:before {
    content:'* ';
  }

  &:-ms-input-placeholder:before {
    content:'* ';
  }

  &::-moz-selection:before {
    content:'* ';
  }
}

.ngdialog {
  padding-top: 80px;
  padding-bottom: 80px;



  .ngdialog-overlay {
    background: $COSMOUI_DIALOG_OVERLAY;
  }

  .ngdialog-content {
      border: 2px solid $COSMOUI_DIALOG_BORDER_COLOR;
      border-radius: 4px;
      box-shadow: 0px 0px 5px $COSMOUI_DIALOG_SHADOW_COLOR;
      background: $COSMOUI_DIALOG_BACKGROUND;
      position: relative;
      margin: 0 auto;
      font-family: "OpenSansLight";
      width: 430px; /* default width */

      .ngdialog-close {
          float: right;
          position: absolute;
          right: 0px;
          top: 5px;
          background: url("/images/x_idle.png") no-repeat center center;
          width: 32px;
          height: 32px;
          cursor: pointer;
          background-color: transparent;
          border: none;
          padding-right: 0px;

          &:hover {
              background: url("/images/x_hover.png") no-repeat center center;
          }

          &:active {
              background: url("/images/x_pressed.png") no-repeat center center;
          }

          &.disabled {
              background: url("/images/x_idle.png") no-repeat center center;
          }

          &:before {
              content: '';
          }
      }

      .dialogTitle {
          display: block;
          width: 100%;
          height: 40px;
          color: $COSMOUI_DIALOG_TITLE_COLOR;
          line-height: 31px;
          font-size: 18px;
          padding-left: 20px;
          padding-top: 5px;
          background-color: $clr-base-00;

          label {
              width: 90%;
              height: 100%;
              text-overflow: ellipsis;
              white-space: nowrap;
              overflow: hidden;
              display: inline-block;
              max-width: 100%;
              margin-bottom: 5px;
              font-weight: 700;
          }
      }

      .dialogDeploymentName {
          position: relative;
          width: 100%;
          text-align: center;
          margin: 0 0 15px;

          input {
              position: relative;
              width: 310px;
              border-radius: 3px;
              padding-left: 10px;
              background-clip: padding-box;
              background-color: $COSMOUI_INPUT_BACKGROUND;
              border: 0;
              padding: 5px 10px;
              line-height: 22px;
          }
      }

      .dialogDescription {
          display: block;
          width: 100%;
          text-align: center;
          font-size: 16px;
          font-family: 'OpenSansRegular';
          margin: 11px 0;
      }

      .dialogInputs {

          position: relative;
          margin:0 auto;
          text-align: left;

          .type-toggle{
              text-align:center;
              button{ width:120px; }
              .section-nav-menu-class{
                  margin-left:-6px; /*  */
              }
          }

          .inputsParameters{
              margin-top:20px;
          }

          .form-raw-item-name{
              display:inline-block;
              max-width: 140px;
              text-overflow: ellipsis;
              overflow: hidden;
              white-space: nowrap;
              height: 37px;
              line-height: 37px;
          }

          &.deployInputs {
              width: 330px;
          }

          &.executeInputs {
              width: 405px;
          }



          ul {
              list-style-type: none;
              //restricting to 5 inputs,the rest is scrollable
              max-height: 200px;
              overflow-y: auto;
              line-height: normal;

              li{
                  clear: both;
              }

              .input-wrapper {
                  float: right;
                  width: 55%;
                  padding-top: 5px;
                  padding-right: 5px;
                  position: relative;
              }

              .param-input{
                  width:100%;
              }

              .restore-default{
                  opacity:0.5;
                  top: 14px;
                  position: absolute;
                  right: 8px;
              }
              .restore-default:hover{
                  opacity:1;
              }

              .rightPaddingText{
                  padding-right:20px;
              }
          }

          textarea {
              width: 100%;
              height: 150px;
              line-height: normal;
              resize: none;
          }

      }

      .error-message {
          display: block;
          color: $clr-base-26;
          margin: 10px 0;
          padding: 10px 20px;
          word-break: normal;
          background-color: #f5f5f5;
          max-height: 300px;
          line-height: 20px;
          word-wrap: break-word;
          overflow-x: auto;
      }

      .buttonsContainer {
          display: block;
          text-align: right;
          line-height: 20px;
          margin: 10px;
      }

      .dialogCheckbox {
          float: left;
          display: inline-block;
          margin: 5px 0 0 10px;
          label {
              cursor: pointer;
          }
      }
  }


}
#uploadDialogContainer {
    &.dialogBox{
        .dialogDescription{
            margin:0;
            line-height:56px;
        }
    }

    .dialogDescription.dragover{

        font-weight:bold;
    }

    #uploadForm {
        position: relative;
        display: block;

        .browse {
            display: block;
            height: 33px;

            #fileInput {
                position: absolute;
                opacity: 0;
                left: 0px;
                z-index: 9998;
                top: 0px;
                width: 35px;
                height: 35px;
                cursor: pointer;
            }

            #browseBtn {
                position: absolute;
                right: 22px;
                height: 32px;
                font-size: 30px;
                padding: 0px 8px 0px 9px;
                line-height: 33px;
                cursor: pointer;
            }

            .browseTxt {
                position: absolute;
                left: 20px;
                width: 340px;
                height: 32px;
                border-radius: 3px;
                padding-left: 10px;
                background-clip: padding-box;
                background-color: $COSMOUI_INPUT_BACKGROUND;
                border: 0;

                &.url {
                    width: 385px;
                    &.disabled {
                        color: red;
                    }
                }
            }
        }

        .name {
            display: block;
            position: relative;
            top: 15px;
            height: 48px;
            input {
                position: relative;
                left: 20px;
                width: 385px;
                height: 32px;
                border-radius: 3px;
                padding-left: 10px;
                background-clip: padding-box;
                background-color: $COSMOUI_INPUT_BACKGROUND;
                border: 0;
            }

            &.browseUrl {
                left: 10px;
            }
        }

        #mainFile {
            position: relative;
            float: left;
            left: 120px;
            top: 63px;

            #mainYamlName {
                width: 272px;
                height: 30px;
                border-radius: 5px;
                margin-left: 10px;
            }
        }

        .upload-process-anim {
            width: 25px;
            height: 25px;
            background: url("/images/progress.gif") no-repeat center center;
            background-color: $clr-base-01;
            border-radius: 25px;
            position: absolute;
            right: 81px;
            bottom: 13px;
        }

        #uploadBtn {
            position: relative;
            margin: 10px 0;
            left: 355px;
            line-height: 20px;
        }

        #required-message {
            display: inline-block;
            color: $clr-base-06;
            font-size: 12px;
            position: absolute;
            bottom: 10px;
            left: 23px;
        }
    }
}

#confirmationDialogContainer {

    .dialogDescription {
        font-size: 20px;
        padding-right: 50px;
        padding-left: 50px;
        line-height: 28px;
        color: $clr-base-00;
    }

    .confirmationButtons {

        #cancelBtn {
            color: $COSMOUI_BUTTON_BACKGROUND;
            font-weight: bold;
            padding: 5px 10px 5px 10px;
            margin: 0px 10px 0px 10px;
            background-color: $clr-base-10;
            border-bottom: 1px solid $COSMOUI_BUTTON_BACKGROUND;
            border-right: 1px solid $COSMOUI_BUTTON_BACKGROUND;
        }
    }
}

#deleteDialog {

    .dialogDescription {
        display: block;
        font-size: 20px;
        line-height: 28px;
        margin: 10px 0 0;
        text-align: left;
        padding: 0 20px;
        height: auto;
        color: $clr-base-00;
    }



    .confirmationButtons {
        #cancelBtnDelDep {
            display: inline-block;
            color: $COSMOUI_BUTTON_BACKGROUND;
            font-weight: bold;
            padding: 5px 10px 5px 10px;
            margin: 0px 0px 0px 10px;
            background-color: $clr-base-10;
            border-bottom: 1px solid $COSMOUI_BUTTON_BACKGROUND;
            border-right: 1px solid $COSMOUI_BUTTON_BACKGROUND;

            &[disabled] {
              background: $COSMOUI_BUTTON_DISABLED_BACKGROUND;
              border-bottom: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
              border-right: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
              color: $clr-base-24;
              cursor: default;
            }
        }
    }
}


.dialog-content{
    padding:0 30px;
}

